--- a/Oefening2.html
+++ b/Oefening2.html
@@ -8,14 +8,45 @@
 </head>
 <body>
     <h1>String manupilation</h1>
-    <textarea name="" id="" cols="30" rows="10">
-    Dit is echt wel tof
+    <textarea oninput="calculate()" name="textarea" id="textarea" cols="30" rows="10">
+Dit is echt wel tof
     </textarea>
-    
+    <div id=""><b>aantal letters </b><span id="txtaantaLetters"></span></div>
+    <div id=""><b>aantal woorden: </b><span id="txtaantalWoorden"></span></div>
+    <div><b>laatste woord: </b><span id="txtLaasteWoord"></span></div>
+    <p>
+    <button id="btnTopUppercase" onclick="toUCase()">To Uppercase</button>
+    <button id="btnToLowerCase" onclick="toLCase()">To Lowercase</button>
+    </p>
     <script>
-    var zin = "het is hier leuk"
-    var woorden = zin.split(" ");
-    console.log(woorden);
+    var txtAantaLetters = document.querySelector("#txtaantaLetters");
+    var txtAantalWoorden = document.querySelector("#txtaantalWoorden");
+    var txtLaatsteWoord = document.querySelector("#txtLaasteWoord");
+    var txtArea = document.querySelector("#textarea");
+    var zin;
+
+    function calculate() {
+        zin = txtArea.value;
+        var woorden = zin.split(" ");
+        var aantalLetters = zin.length;
+        var aantalWoorden =  woorden.length;
+        var laatsteWoord = woorden[woorden.length -1];
+        
+        txtAantaLetters.innerHTML = aantalLetters;
+        txtAantalWoorden.innerHTML = aantalWoorden;
+        txtLaatsteWoord.innerHTML = laatsteWoord;    
+    }
+
+    function toLCase() {
+        zin = txtArea.value;
+        txtArea.innerHTML = zin.toLowerCase();
+    }
+
+    function toUCase() {
+        zin = txtArea.value;
+        txtArea.innerHTML = zin.toUpperCase();
+    }
+
     </script>
 </body>
 </html>
