--- a/Oefening2.html
+++ b/Oefening2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+<body onload="calculate()">
     <h1>String manupilation</h1>
     <textarea oninput="calculate()" name="textarea" id="textarea" cols="30" rows="10">
 Dit is echt wel tof
