--- a/Oefening2.html
+++ b/Oefening2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body onload="calculate()">
-    <h1>String manupilation</h1>
+    <h1>String manipulation</h1>
     <textarea oninput="calculate()" name="textarea" id="textarea" cols="30" rows="10">
 
     </textarea>
