Website titel gewijzigd

--- a/Oefening2.html
+++ b/Oefening2.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Oefening front end Dev: String Manipulation</title>
 </head>
 <body onload="calculate()">
-    <h1>String manipulation</h1>
+    <h1>String Manipulation</h1>
     <textarea oninput="calculate()" name="textarea" id="textarea" cols="30" rows="10">
 
     </textarea>
